--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.21",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
