--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -16,7 +16,10 @@
     "query-string": "^9.0.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "zustand": "^4.5.2"
   },
