end of section 12

--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -28,9 +28,15 @@
             "Address": "http://bids-svc"
           }
         }
-      }
-
+      },
+      "notifications": {
+        "Destinations": {
+          "notifyApi": {
+            "Address": "http://notify-svc"
+          }
+        }
       }
     }
   }
+}
   
